--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<header>
 		<div class="contenedor">
 			<nav class="menu">
-				<a href="#">Acerca de</a>
-				<a href="#">Trabajos</a>
-				<a href="#">Contacto</a>
+				<a href="#acerca">Acerca de</a>
+				<a href="#portafolio">Portafolio</a>
+				<a href="#contacto">Contacto</a>
 			</nav>
 			<div class="contenedor-texto">
 				<div class="texto">
@@ -26,161 +26,146 @@
 		</div>
 	</header>
 	<section class="main">
-		<section class="acerca-de">
+		<section class="acerca-de" id="acerca">
 			<div class="contenedor">
 				<div class="foto">
 					<img src="images/germano.jpg" width="115" height="115" alt="Ger">
 				</div>
 				<div class="texto">
 					<h3 class="titulo">Acerca de</h3>
-					<p>Diseñador autodidacta que asimila las nuevas tecnologías en el diseño gráfico asi como la transición de lo analógico a lo digital, interesado en las nuevas tendencias web pensando que el diseño debe ser sobrio, limpio y sobre todo pensando en la experiencia del usuario. Apasionado de la tecnología, gadgets y demas temas geek, fanboy de Apple pero crítico sin ser fanático.</p>
+					<p>Diseñador que asimila las nuevas tecnologías en el diseño gráfico asi como la transición de lo analógico a lo digital, interesado en las nuevas tendencias web pensando que el diseño debe ser sobrio, limpio y sobre todo pensando en la experiencia del usuario. Apasionado de la tecnología, gadgets y demas temas geek, fanboy de Apple pero crítico sin ser fanático.</p>
 				</div>
 			</div>
 		</section>
 
-		<section class="desarrollo">
-			<div class="contenedor">
-				<h3 class="titulo">Desarrollo Web</h3>
-				<div class="contenedor-desarrollo">
-					<div class="desarrollo">
-						<div class="thumb">
-							<a href="desarrollo.html"><img src="images/thumbs/corpomar.jpg" alt=""></a>
+		<section id="portafolio">
+			<section class="desarrollo">
+				<div class="contenedor">
+					<h3 class="titulo">Desarrollo Web</h3>
+					<div class="contenedor-desarrollo">
+						<div class="desarrollo">
+							<div class="thumb">
+								<a href="desarrollo.html"><img src="images/thumbs/corpomar.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre">Sitio corporativo Corpomar</p>
+								<p class="categoria">HTML - CSS</p>
+							</div>
 						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
-							<p class="categoria">HTML - CSS - PHP</p>
+						<div class="desarrollo">
+							<div class="thumb">
+								<a href="desarrollo.html"><img src="images/thumbs/widget.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre">Widget Localización</p>
+								<p class="categoria">HTML - CSS</p>
+							</div>
 						</div>
-					</div>
-					<div class="desarrollo">
-						<div class="thumb">
-							<a href="desarrollo.html"><img src="images/thumbs/widget.jpg" alt=""></a>
+						<div class="desarrollo">
+							<div class="thumb">
+								<a href="desarrollo.html"><img src="images/thumbs/bliss.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre">Landing Page Bliss</p>
+								<p class="categoria">HTML - CSS</p>
+							</div>
 						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
-							<p class="categoria">HTML - CSS - PHP</p>
-						</div>
-					</div>
-					<div class="desarrollo">
-						<div class="thumb">
-							<a href="desarrollo.html"><img src="images/thumbs/bliss.jpg" alt=""></a>
-						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
-							<p class="categoria">HTML - CSS - PHP</p>
-						</div>
-					</div>
-					<div class="desarrollo">
-						<div class="thumb">
-							<a href="desarrollo.html"><img src="images/thumbs/axa.jpg" alt=""></a>
-						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
-							<p class="categoria">HTML - CSS - PHP</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="desarrollo">
-			<div class="contenedor">
-				<h3 class="titulo">Diseño Web</h3>
-				<div class="contenedor-desarrollo">
-					<div class="desarrollo">
-						<div class="thumb">
-							<a href="web.html"><img src="images/thumbs/corpomar01.jpg" alt=""></a>
-						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
-						</div>
-					</div>
-					<div class="desarrollo">
-						<div class="thumb">
-							<a href="web.html"><img src="images/thumbs/corpomar02.jpg" alt=""></a>
-						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
-						</div>
-					</div>
-					<div class="desarrollo">
-						<div class="thumb">
-							<a href="web.html"><img src="images/thumbs/corpomar03.jpg" alt=""></a>
-						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
-						</div>
-					</div>
-					<div class="desarrollo">
-						<div class="thumb">
-							<a href="web.html"><img src="images/thumbs/corpomar04.jpg" alt=""></a>
-						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
+						<div class="desarrollo">
+							<div class="thumb">
+								<a href="desarrollo.html"><img src="images/thumbs/axa.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre">Landing Page Axa</p>
+								<p class="categoria">HTML - CSS - Bootstrap</p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
+			</section>
 
-		<section class="impresos">
-			<div class="contenedor">
-				<h3 class="titulo">Diseño Editorial</h3>
-				<div class="contenedor-impresos">
-					<div class="impresos">
-						<div class="thumb">
-							<a href="impresos.html"><img src="images/thumbs/impresos01.jpg" alt=""></a>
+			<section class="desarrollo">
+				<div class="contenedor">
+					<h3 class="titulo">Diseño Web</h3>
+					<div class="contenedor-desarrollo">
+						<div class="desarrollo">
+							<div class="thumb">
+								<a href="web.html"><img src="images/thumbs/corpomar01.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre"></p>
+							</div>
 						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
+						<div class="desarrollo">
+							<div class="thumb">
+								<a href="web.html"><img src="images/thumbs/corpomar02.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre"></p>
+							</div>
 						</div>
-					</div>
-					<div class="impresos">
-						<div class="thumb">
-							<a href="impresos.html"><img src="images/thumbs/impresos02.jpg" alt=""></a>
+						<div class="desarrollo">
+							<div class="thumb">
+								<a href="web.html"><img src="images/thumbs/corpomar03.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre"></p>
+							</div>
 						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
-						</div>
-					</div>
-					<div class="impresos">
-						<div class="thumb">
-							<a href="impresos.html"><img src="images/thumbs/impresos03.jpg" alt=""></a>
-						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
-						</div>
-					</div>
-					<div class="impresos">
-						<div class="thumb">
-							<a href="impresos.html"><img src="images/thumbs/impresos04.jpg" alt=""></a>
-						</div>
-						<div class="descripcion">
-							<p class="nombre">Lorem Ipsum</p>
+						<div class="desarrollo">
+							<div class="thumb">
+								<a href="web.html"><img src="images/thumbs/corpomar04.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre"></p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
+			</section>
+
+			<section class="impresos">
+				<div class="contenedor">
+					<h3 class="titulo">Diseño Grafico/Editorial</h3>
+					<div class="contenedor-impresos">
+						<div class="impresos">
+							<div class="thumb">
+								<a href="impresos.html"><img src="images/thumbs/impresos01.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre">Anuncio Regent</p>
+							</div>
+						</div>
+						<div class="impresos">
+							<div class="thumb">
+								<a href="impresos.html"><img src="images/thumbs/impresos02.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre">Anuncio Regent</p>
+							</div>
+						</div>
+						<div class="impresos">
+							<div class="thumb">
+								<a href="impresos.html"><img src="images/thumbs/impresos03.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre">Anuncio Regent</p>
+							</div>
+						</div>
+						<div class="impresos">
+							<div class="thumb">
+								<a href="impresos.html"><img src="images/thumbs/impresos04.jpg" alt=""></a>
+							</div>
+							<div class="descripcion">
+								<p class="nombre">Revista Tu Interfaz de Negocios</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	</section>
 	<footer>
-		<section class="contacto">
+		<section class="contacto" id="contacto">
 			<div class="contenedor">
 				<h3 class="titulo">Contacto</h3>
 				<form class="formulario" action="">
@@ -193,8 +178,8 @@
 		</section>
 		<section class="redes-sociales">
 			<div class="contenedor">
-				<a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-				<a href="#" class="github"><i class="fa fa-github"></i></a>
+				<a href="https://www.linkedin.com/in/german-ramos-1a1b5b62/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+				<a href="https://github.com/Cassi3l" class="github"><i class="fa fa-github"></i></a>
 			</div>
 		</section>
 	</footer>
