--- a/web.html
+++ b/web.html
@@ -29,9 +29,9 @@
   <header class="masthead1 d-flex flex-column">
     <div class="container-fluid">
       <nav class="menu">
-        <a href="#">Acerca de</a>
-        <a href="#">Trabajos</a>
-        <a href="#">Contacto</a>
+        <a href="https://cassi3l.github.io/#acerca">Acerca de</a>
+        <a href="https://cassi3l.github.io/#portafolio">Portafolio</a>
+        <a href="https://cassi3l.github.io/#contacto">Contacto</a>
       </nav>
     </div>
     <div class="container text-center my-auto seccion-web tit-web">
