--- a/impresos.html
+++ b/impresos.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Portafolio | Diseño Editorial</title>
+  <title>Portafolio | Diseño Gráfico/Editorial</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
       </nav>
     </div>
     <div class="container text-center my-auto seccion-desarrollo tit-des">
-        <h1 class="mb-1">Diseño Editorial</h1>
+        <h1 class="mb-1">Diseño Gráfico/Editorial</h1>
     </div>
     <div class="overlay"></div>
   </header>
