--- a/impresos.html
+++ b/impresos.html
@@ -34,7 +34,7 @@
         <a href="https://cassi3l.github.io/#contacto">Contacto</a>
       </nav>
     </div>
-    <div class="container text-center my-auto seccion-desarrollo tit-des">
+    <div class="container text-center my-auto seccion-impresos tit-des">
         <h1 class="mb-1">Diseño Gráfico/Editorial</h1>
     </div>
     <div class="overlay"></div>
