--- a/web.html
+++ b/web.html
@@ -28,7 +28,7 @@
   <!-- Header -->
   <header class="masthead1 d-flex flex-column">
     <div class="container-fluid">
-      <nav class="menu">
+      <nav class="menu menu-impresos">
         <a href="https://cassi3l.github.io/#acerca">Acerca de</a>
         <a href="https://cassi3l.github.io/#portafolio">Portafolio</a>
         <a href="https://cassi3l.github.io/#contacto">Contacto</a>
