--- a/web06.html
+++ b/web06.html
@@ -27,7 +27,13 @@
 
   <!-- Header -->
   <header class="masthead1 d-flex flex-column">
-    <div class="overlay"></div>
+   <div class="container-fluid">
+      <nav class="menu menu-impresos">
+        <a href="https://cassi3l.github.io/#acerca">Acerca de</a>
+        <a href="https://cassi3l.github.io/#portafolio">Portafolio</a>
+        <a href="https://cassi3l.github.io/#contacto">Contacto</a>
+      </nav>
+    </div>
   </header>
 
   <!-- Portfolio -->
