--- a/impresos07.html
+++ b/impresos07.html
@@ -29,10 +29,9 @@
   <header class="masthead1 d-flex">
     <div class="container-fluid">
       <nav class="menu">
-        <a href="#">Acerca de</a>
-        <a href="#">Trabajos</a>
-        <a href="#">Contacto</a>
-      </nav>
+        <a href="https://cassi3l.github.io/#acerca">Acerca de</a>
+        <a href="https://cassi3l.github.io/#portafolio">Portafolio</a>
+        <a href="https://cassi3l.github.io/#contacto">Contacto</a>
     </div>
     <div class="overlay"></div>
   </header>
