--- a/impresos08.html
+++ b/impresos08.html
@@ -29,9 +29,9 @@
   <header class="masthead8 d-flex">
     <div class="container-fluid">
       <nav class="menu">
-        <a href="#">Acerca de</a>
-        <a href="#">Trabajos</a>
-        <a href="#">Contacto</a>
+        <a href="https://cassi3l.github.io/#acerca">Acerca de</a>
+        <a href="https://cassi3l.github.io/#portafolio">Portafolio</a>
+        <a href="https://cassi3l.github.io/#contacto">Contacto</a>
       </nav>
     </div>
     <div class="overlay"></div>
