--- a/desarrollo.html
+++ b/desarrollo.html
@@ -45,21 +45,21 @@
     <div class="container">
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="desarrollo01.html">
+          <a class="portfolio-item" href="https://cassiel.dev/ejemplos/corpomar/index.html">
             <img class="img-fluid" src="images/thumbs/corpomar.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="desarrollo02.html">
+          <a class="portfolio-item" href="https://cassiel.dev/ejemplos/widget_localizacion/widget.html">
             <img class="img-fluid" src="images/thumbs/widget.jpg" alt="">
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="desarrollo03.html">
+          <a class="portfolio-item" href="https://cassiel.dev/ejemplos/bliss/index.html">
             <img class="img-fluid" src="images/thumbs/bliss.jpg" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="desarrollo04.html">
+          <a class="portfolio-item" href="https://cassiel.dev/ejemplos/landing_axa/index.html">
             <img class="img-fluid" src="images/thumbs/axa.jpg" alt="">
         </div>
       </div>
